fix header and moved overflow to table body to make it scrollable

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.scss
@@ -38,6 +38,10 @@
     }
 
     ::ng-deep tbody {
+      display: block;
+      max-height: 350px;
+      overflow-y: auto;
+
       tr.mat-mdc-row {
         height: 56px;
 
